--- a/style.css
+++ b/style.css
@@ -230,3 +230,63 @@ li.reasons:before{
     border-style: none;
     border-radius: 5px;    
 }
+.bonus-section-education{
+    height: 80vh;
+    width: auto;
+    justify-content: center;
+    text-align: center;
+    padding-bottom: 200px;
+    padding-top: 200px;
+
+}
+.education{
+    width: 700px;
+    height:auto;
+    display: flex;
+    padding: 1px 10px;
+    align-items:baseline;
+    margin:auto;
+    gap: 0px;
+    border-bottom: 1px solid black;
+}
+.education-title{
+    font-size: 50px;
+    width:auto;
+    height:auto;
+    padding-bottom: 30px;
+}
+.education img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin: auto;
+}
+.education-description{
+    width: 450px;
+    height: 180px;
+    text-align: left;
+    padding: 10px 20px;
+    margin: auto;
+}
+.degree{
+    padding: 20px 5px;
+    font-size: 30px;
+}
+.institution{
+    padding: 5px;
+    font-size: 20px;
+}
+.degree-description{
+    padding: 5px;
+    font-size: 15px;
+
+}
+.education-total{
+    display: flex;
+    flex-direction: column;
+    width: 700px;
+    height:auto;
+    align-items:baseline;
+    margin:auto;
+    gap: 0px;
+}
