--- a/style.css
+++ b/style.css
@@ -1,109 +1,116 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .top-portion{
-    width: 100%;
-    height: 90vh;
     background-image: url('./images/banner/banner2.png');
-    background-color: #black;
     background-repeat: no-repeat;
     background-position: center;
-    background-size:cover; 
+    background-size: cover;    
+}
+.top-part{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    align-content: center;
     justify-content: center;
-    text-align: center;
-    align-items: center;
-    
+    margin-left: -200px;
+
 }
 .top-title{
+    width: 500px;
+    height: 230px;
     text-align: right;
     font-weight: 700;
     font-size: 65px;
-    padding-top: 250px;
-    padding-bottom: 20px;
-    padding-right: 15%;
-    padding-left: 60%;   
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: right;
 }
 .top-description{
+    width: 550px;
+    height: 65px;
     text-align: right;
     font-style: normal;
     line-height: 1.5em;
     font-weight: 400;
-    font-size: 12px;
-    padding-top: 10px;
-    padding-bottom: 30px;
-    padding-right: 15%;
-    padding-left: 67%; 
+    font-size: 20px;
+    padding-top: 15px;
+    padding-bottom: 45px;
 
 }
 .button-primary{
-    display: block;
-    margin-left: auto;
-    margin-right: 15%;
-    background-color: orangered;
-    text-align: right;
+    width: 150px;
+    height: 70px;
+    background-color: rgb(241, 91, 34);
     color: white;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 20px;
     line-height: 40px;
     border-radius: 5px;
     border-style: none;
-    padding: 15px;
+    padding: 5px 5px;
 }
 .failure{
-    background-color: white;
+    background-color: #ffffff;
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     margin:auto;
+    gap: 50px;
 }
 .failure-image{
+    width: auto;
+    height: 750px;
     padding-top: 100px;
     padding-left: 20%;
     margin: auto;
-    width:300px;
-}
-.failure-blog{
-    text-align: left;
-    padding-top: 350px;
-    padding-left: 20%;
-    margin: auto;
-    width: 1000px;
 
 }
+.failure-blog{
+    width: auto;
+    height: 500px;
+    text-align: left;
+    padding-top: 330px;
+    padding-left: 20px;
+    margin: auto;
+}
 .failure-title{
+    width: 300px;
     font-weight: 700;
+    line-height: 1.2em;
     font-size: 40px;
-    padding-right: 60%;
     padding-bottom: 15px;
 }
 .failure-description{
-
+    height: 100px;
     font-weight: 400;
     font-size: 15px;
-    line-height: 22px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 60%;
+    line-height: 1.5em;
+    padding-top: 15px;
+    padding-right: 550px;
 }
- 
+
 .failure-why{
     list-style:none;
     font-size: 15px;
-    line-height: 30px;
-    
+    line-height: 2em;
 }
 li.reasons:before{
-    content: "\2713"; 
-    color: green;
+    content: "\2714  "; 
+    color: #4bbc7f;
+
+    padding-right: 10px;
 }
 .my-plan{
     text-align: center;
     justify-content: center;
-    padding-top: 10px;
-    padding-bottom: 20px;
+    padding-top: 5px;
+    padding-bottom: 50px;
 }
 .my-plan > h2{
     font-size: 50px;
@@ -127,9 +134,9 @@ li.reasons:before{
     padding-top: 10px;
 }
 .banner{
-    width:60%;
+    width:65%;
     height: 30vh;
-    background-image: linear-gradient(to right, #d91212, #ffffff00), url("./images/watch.png");
+    background-image: linear-gradient(to right, #f15b22, #ffffff00), url("./images/watch.png");
     background-repeat: no-repeat;
     background-position:center;
     background-size: cover;
@@ -137,55 +144,60 @@ li.reasons:before{
     text-align: center;
     align-items: center;
     border-radius: 10px;
-    margin-left: 20%;
-    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+    margin-bottom: 120px;
 }
 .banner-title{
     font-weight: 700;
-    font-size: 50px;
+    font-size: 40px;
     height: 60px;
-    width: 700px;
+    width: 600px;
     justify-items: left;
     text-align: left;
-    padding: 30px 50px;
+    margin-left: 50px;
+    margin-top: 45px;
+    padding: 50px 5px;
+    color: #ffffff
 }
 .banner-button{
-    color: orangered;
+    color: #f15b22;
     font-weight: 600;
-    font-size: 25px;
-    padding: 20px 50px;
+    font-size: 20px;
+    padding: 20px 40px;
     justify-items: left;
     display: flex;
-    margin: 50px;
+    margin-left: 55px;
+    margin-top: 5px;
     border-style: none;
     border-radius: 5px;
 }
 .web-bottom{
     width:auto;
-    height: 70vh;
+    height: 60vh;
     background-color: #000000;
-    background-repeat: no-repeat;
-    background-position:center;
-    background-size: cover;
     justify-content: center;
     text-align: center;
     align-items: center;
-    margin: auto;
     color: white;    
+ 
 }
 .bottom-container{
     display:flex;
-    gap: 40%;
+    gap: 30%;
 }
 .future{
     text-align: left;
-    height:40vh;
+    height:20vh;
     width:22%;
-    padding: 8%;
+    margin-left: 20px;
+    padding-top: 6%;
+    padding-left: 8%;
 }
 .future-title{
     font-size: 45px;
-    padding: 10px 20px;
+    padding-left: 20px;
     font-weight: 700;
 }
 .future-description{
@@ -200,13 +212,14 @@ li.reasons:before{
 }
 .subscribe{
     text-align: left;
-    height:40vh;
+    height:30vh;
     width:22%;
-    padding-top: 10%;
+    padding-top: 6%;
+    padding-left: 8%;
 }
 .subscribe-title{
     padding-bottom: 20px;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 600;
 }
 #subscriber-email[type=email] {
