Edit after seeing live site in 15.6' monitor

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
     padding-bottom: 15px;
 }
 .failure-description{
-    height: 100px;
+    Width: 400px;
     font-size: 15px;
     line-height: 1.5em;
     padding-top: 15px;
@@ -93,6 +93,7 @@
     list-style:none;
     font-size: 15px;
     line-height: 2em;
+    padding-top: 10px;
 }
 li.reasons:before{
     content: "\2714  "; /* I found how to use check mark in unordered list using google. Still it looks a bit different than assignment one. I tried using font awesome but they have only one free check mark and the one I used looks analogous m*/ 
@@ -103,13 +104,14 @@ li.reasons:before{
 .my-plan{
     text-align: center;
     justify-content: center;
-    padding-top: 5px;
+    padding-top: 150px;
     padding-bottom: 50px;
+    margin-top: px;
 }
 .my-plan > h2{
     font-size: 50px;
-    padding-top: 10px;
-    padding-bottom: 30px;
+    padding-top: 50px;
+    padding-bottom: 80px;
 
 }
 .whole-plan{
@@ -129,7 +131,7 @@ li.reasons:before{
 }
 .banner{
     width:65%;
-    height: 30vh;
+    height: 250px;
     background-image: linear-gradient(to right, #f15b22, #ffffff00), url("./images/watch.png");/* Challenge to use color gradient is Completed  */
     background-repeat: no-repeat;
     background-position:center;
@@ -142,14 +144,14 @@ li.reasons:before{
 }
 .banner-title{
     font-weight: 700;
-    font-size: 40px;
+    font-size: 30px;
     height: 60px;
-    width: 600px;
+    width: 400px;
     justify-items: left;
     text-align: left;
     margin-left: 50px;
     margin-top: 45px;
-    padding: 50px 5px;
+    padding: 40px 5px;
     color: #ffffff
 }
 .banner-button{
@@ -166,7 +168,7 @@ li.reasons:before{
 }
 .web-bottom{
     width: auto;
-    height: 60vh;
+    height: 70vh;
     background-color: #000000;
     justify-content: center;
     text-align: center;
@@ -177,10 +179,11 @@ li.reasons:before{
 .bottom-container{
     display: flex;
     gap: 30%;
+
 }
 .future{
     text-align: left;
-    height:20vh;
+    height:200px;
     width:22%;
     margin-left: 20px;
     padding-top: 6%;
@@ -207,6 +210,7 @@ li.reasons:before{
     width: 22%;
     padding-top: 6%;
     padding-left: 8%;
+
 }
 .subscribe-title{
     padding-bottom: 20px;
@@ -239,7 +243,7 @@ li.reasons:before{
     width: auto;
     justify-content: center;
     text-align: center;
-    padding-bottom: 200px;
+    padding-bottom: 500px;
     padding-top: 200px;
 
 }
@@ -269,7 +273,7 @@ li.reasons:before{
     width: 450px;
     height: 180px;
     text-align: left;
-    padding: 10px 20px;
+    padding: 30px;
     margin: auto;
 }
 .degree{
